--- a/awm/awm-web/.settings/org.eclipse.wst.common.component
+++ b/awm/awm-web/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,15 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="awm-service-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/awm-service/awm-service">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="awm-dao-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/awm-dao/awm-dao">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="awm-base-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/awm-base/awm-base">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="awm-web"/>
         <property name="java-output-path" value="/awm-web/target/classes"/>
     </wb-module>
